[metadata]
name = flake8-asserts
author = Stephen Finucane
author-email = stephenfinucane@hotmail.com
description-file =
    README.md
home-page = https://github.com/stephenfin/flake8-asserts
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    flake8_asserts

[entry_points]
flake8.extension =
    A101 = flake8_asserts.checks:assert_true
    A102 = flake8_asserts.checks:assert_equal
    A103 = flake8_asserts.checks:assert_in
    A104 = flake8_asserts.checks:assert_is
    A105 = flake8_asserts.checks:assert_is_none
    A106 = flake8_asserts.checks:assert_is_instance

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source


[pbr]
warnerrors = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
